# Rust-API

./: Cargo.toml  Makefile  README.md
deployment/: docker-compose.yaml
domain/: Cargo.toml
domain/migrations/00001_example/: down.sql  up.sql
domain/src/: lib.rs  schema.rs  traits.rs  user.rs
domain/src/postgres/: user.rs
httpapi/: Cargo.toml
httpapi/src/: auth.rs  lib.rs  models.rs  mono.rs  utils.rs
scripts/: .env_local
server/: Cargo.toml
server/src/: main.rs
src/: client.rs  main.rs  test.rs
