[package]
name = "rust-api"
version = "0.1.0"
author = ["neil399399 <neil399399@gmail.com>"]
edition = "2018"

[dependencies]
jsonrpc-http-server = "12.0.0"
jsonrpc-ws-server = "12.0.0"
jsonrpc-core = "12.0.0"
jsonrpc-server-utils = "12.0.0"
log = "0.4"
pretty_env_logger = "0.4"
sysinfo = "0.11.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"