[package]
name = "domain"
version = "0.1.0"
authors = ["neil399399 <neil399399@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
uuid = { version = ">=0.6.0, <0.7.0", features = ["serde", "use_std", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
diesel = { version = "1.3.3", features = ["postgres"] }
