[package]
name = "httpapi"
version = "0.1.0"
authors = ["neil399399 <neil399399@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-web-httpauth = "0.4.0"
actix-cors = "0.2.0"
actix-service = "1.0.5"
actix-threadpool = "0.3.2"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4.8"
env_logger = "0.7"
chrono = { version = "0.4.12" }
ansi_term = "0.12.1"

#crate
domain = { path = "../domain" }